--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,11 @@ edition = "2018"
 [dependencies]
 amethyst = { git = "https://github.com/amethyst/amethyst" }
 lazy_static = "1.3.0"
+amethyst-editor-sync = { git = "https://github.com/amethyst/editor-core" }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tap = "0.3.0"
+
+[dependencies.nphysics-ecs-dumb]
+git = "https://github.com/distransient/nphysics-ecs-dumb"
+branch = "master"
